drag&drop with timer

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,5 +6,6 @@
   <li>{{ item.password}}</li>
   
 </ul> -->
-<app-navbar></app-navbar>
-<router-outlet></router-outlet>
+<!-- <app-navbar></app-navbar>
+<router-outlet></router-outlet> -->
+<app-developer-content></app-developer-content>
