--- a/src/app/register/register.component.scss
+++ b/src/app/register/register.component.scss
@@ -1,5 +1,5 @@
 .form{
-    height: 100vh;
+    height: 90vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -39,9 +39,9 @@
                     border-bottom:  #192965 solid 1px;
                 }
                 
-                &-option{
+                // &-option{
     
-                }
+                // }
             }
         }
         &__btns{
