--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,4 +8,5 @@
 </ul> -->
 <!-- <app-navbar></app-navbar>
 <router-outlet></router-outlet> -->
+<app-drag-timer></app-drag-timer>
 <app-developer-content></app-developer-content>
