All Objects Done Put not company object

--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -33,7 +33,7 @@
 <!-- ------------------------------- Sumbit -------------------------------- -->
         <div class="form-container__btns">
             <button class="form-container__btns-submit" type="submit"
-                [disabled]="nameIsExist || register.invalid">Send</button>
+                [disabled]="nameIsExist || phoneIsExist || register.invalid">Send</button>
         </div>
     </form>
 </section>
