--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -2,9 +2,8 @@
     <form class="form-container" [formGroup]="register" (ngSubmit)="createAccount(register)">
 <!-- ----------------------------- Name Input ------------------------------ -->
         <div class="form-container__wrapper">
-            <input class="form-container__wrapper-input" (change)="onChangeName()" formControlName="name" type="text"
+            <input class="form-container__wrapper-input"  formControlName="name" type="text"
                 placeholder="Username">
-            <div *ngIf="nameIsExist" class="not-valid-name">vaild name</div>
             <div *ngIf="register.get('name').hasError('pattern')" class="not-valid-name"> name Must be </div>
         </div>
 <!-- ----------------------------- Email Input ----------------------------- -->
@@ -33,7 +32,7 @@
 <!-- ------------------------------- Sumbit -------------------------------- -->
         <div class="form-container__btns">
             <button class="form-container__btns-submit" type="submit"
-                [disabled]="nameIsExist || phoneIsExist || register.invalid">Send</button>
+                [disabled]="phoneIsExist || register.invalid">Send</button>
         </div>
     </form>
 </section>
