--- a/src/app/developer-content/developer-content.component.html
+++ b/src/app/developer-content/developer-content.component.html
@@ -1,7 +1,11 @@
+<header class="header">
+  <h2>total time: {{totalProjectTime}}</h2>
+  <h2 class="bonus">Bonus :{{bonusValue}} </h2>
+  <h2 class="delay">Delay :{{delayValue}} </h2>
+</header>
 <div cdkDropListGroup>
     <div class="example-container">
       <h2>To do</h2>
-  
       <div
         cdkDropList
         [cdkDropListData]="todo"
@@ -26,7 +30,7 @@
           <p>{{result|timerFormat:dropCardMinnutes:dropCardSeconds}}</p>
           <p>{{item.name}}</p>
           <p>{{item.time}}</p>
-          <button id="btn" (click)="handlePause()">{{status}}</button>
+          <button (click)="handlePause()">{{status}}</button>
   
         </div>
       </div>
