--- a/src/app/create-project/create-project.component.html
+++ b/src/app/create-project/create-project.component.html
@@ -53,7 +53,7 @@
 
     <div class="form-container__wrapper">
         <label>Project Attachment:</label>
-        <input type="file" formControlName="attachment"  (change)='encodeImageFileAsURL($event,item)'>  
+        <!-- <input type="file" formControlName="attachment"  (change)='encodeImageFileAsURL($event,item)'>   -->
     </div>
 
     <!-- <<<<<<<<<<<<<<<<<<<<<<<<<<<<<< Project Start Date >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>> -->
