--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,4 +3,4 @@
 <!-- <app-admin-panel></app-admin-panel> -->
 <!-- <app-drag-timer></app-drag-timer> -->
 <!-- <app-developer-content></app-developer-content> -->
-<app-create-project></app-create-project>
+<!-- <app-create-project></app-create-project> -->
