--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,4 +1,5 @@
 <section class="form">
+    <app-reg-animation></app-reg-animation>
     <form class="form-container" [formGroup]="register" (ngSubmit)="createAccount(register)">
 <!-- ----------------------------- Name Input ------------------------------ -->
         <div class="form-container__wrapper">
