--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -18,7 +18,6 @@
                 padding: 0.5rem 0.5rem;
                 border: none;
                 position: relative;
-                transition:border-bottom 1s ;
                 &:focus{
                     outline: none;
                 }
@@ -28,14 +27,17 @@
         }
     }
 }
-.mat-form-field-appearance-legacy .mat-form-field-infix{
-    border-bottom: 12px solid green !important;
+::ng-deep .mat-form-field-flex{
+    border-bottom: 1px solid green;
+}
+::ng-deep .mat-form-field-appearance-legacy .mat-form-field-label{
+    font-size: 13px;
 }
 .hide{
     font-size:20px !important;
     margin-bottom: 10px;
 
 }
-.mat-form-field-appearance-outline .mat-form-field-outline {
+::ng-deep .mat-form-field-appearance-outline .mat-form-field-outline {
     color: white !important;
   }
