--- a/src/app/register/register.component.scss
+++ b/src/app/register/register.component.scss
@@ -1,5 +1,5 @@
 .form{
-    height: 90vh;
+    height: 85vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -40,4 +40,7 @@
     }
         }
 
+}
+app-reg-animation{
+    flex:0 1 50%
 }
