--- a/src/app/developer-content/developer-content.component.html
+++ b/src/app/developer-content/developer-content.component.html
@@ -23,11 +23,7 @@
         class="example-list"
         (cdkDropListDropped)="drop($event)" >
         <div class="example-box" *ngFor="let item of workingOn" cdkDrag>
-<<<<<<< HEAD
-          <p>{{result|timerFormat:dropCardMinnutes:dropCardSeconds}}</p>
-=======
-          <p>{{dropCardTime}}</p>
->>>>>>> omnia
+          <p>{{item.time}}</p>
           <p>{{item.name}}</p>
           <p>{{item.time}}</p>
           <button id="btn" (click)="handlePause()">{{status}}</button>
@@ -43,10 +39,10 @@
         class="example-list"
         (cdkDropListDropped)="drop($event)">
         <div class="example-box" *ngFor="let item of finished" cdkDrag>
+          <p>{{result}}</p>
           <p>{{item.name}}</p>
           <p>{{item.time}}</p>
         </div>
       </div>
     </div>
   </div>
-  
