update new timer

--- a/src/app/admin-panel/admin-panel.component.html
+++ b/src/app/admin-panel/admin-panel.component.html
@@ -43,15 +43,15 @@
                         <section class="profiles">
                             <div class="profiles-container">
                                 <div class="profiles-container__search-form">
-                                    <label>users::{{itemLength}}</label>
+                                    <label>Emplyees::{{itemLength}}</label>
                                     <input [(ngModel)]="filterValue" placeholder="Search">
                                 </div>
-                                <div class="profiles-container__list" *ngIf="users?.length > 0 ; else noemployees">
+                                <div class="profiles-container__list" *ngIf="employees?.length > 0 ; else noemployees">
                                     <ul>
-                                        <li *ngFor="let item of users | search:filterValue">
+                                        <li *ngFor="let item of employees | search:filterValue">
                                             {{item.name}} :{{item.role}}: {{item.email}}
-                                            <button type="button" (click)="deleteUser($event,item)">X</button>
-                                            <button type="button" (click)="editUser($event,item)">E</button>
+                                            <button type="button" (click)="deleteEmp($event,item)">X</button>
+                                            <button type="button" (click)="editEmp($event,item)">E</button>
                                         </li>
                                     </ul>
                                 </div>
