--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,6 +10,7 @@
 <!-- <app-navbar></app-navbar>
 <router-outlet></router-outlet> -->
 <app-navbar></app-navbar>
+<app-all-projects></app-all-projects>
 <app-developer-content></app-developer-content>
 <router-outlet></router-outlet>
 <app-admin-panel></app-admin-panel>
