--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,22 +7,13 @@
   <li>{{ item.password}}</li>
   
 </ul> -->
-<<<<<<< HEAD
-<!-- <app-navbar></app-navbar>
-<router-outlet></router-outlet> -->
+
 <app-navbar></app-navbar>
+<router-outlet></router-outlet>
 <app-all-projects></app-all-projects>
-<app-developer-content></app-developer-content>
-<router-outlet></router-outlet>
-<app-admin-panel></app-admin-panel>
-
-
-=======
-<app-navbar></app-navbar>
-<router-outlet></router-outlet>
-<app-admin-panel></app-admin-panel>
+<!-- <app-admin-panel></app-admin-panel> -->
 <app-drag-timer></app-drag-timer>
 <app-developer-content></app-developer-content>
->>>>>>> nada
+
 
 
