--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,7 +11,7 @@
 <router-outlet></router-outlet>
 <app-all-projects></app-all-projects>
 <!-- <app-admin-panel></app-admin-panel> -->
-<app-drag-timer></app-drag-timer>
+<!-- <app-drag-timer></app-drag-timer> -->
 <app-developer-content></app-developer-content>
 <app-navbar></app-navbar>
 <router-outlet></router-outlet>
