--- a/src/app/developer-content/developer-content.component.html
+++ b/src/app/developer-content/developer-content.component.html
@@ -7,7 +7,7 @@
     <div class="example-container">
       <h2>To do</h2>
       <div
-        cdkDropList
+        cdkDropList 
         [cdkDropListData]="todo"
         class="example-list"
         (cdkDropListDropped)="drop($event)" cdkDropList= "disable">
@@ -17,7 +17,6 @@
         </div>
       </div>
     </div>
-  
     <div class="example-container">
       <h2>working On</h2>
       <div
@@ -30,25 +29,22 @@
           <p>{{item.name}}</p>
           <p>{{item.time}}</p>
           <button (click)="handlePause()">{{status}}</button>
-  
         </div>
       </div>
     </div>
     <div class="example-container">
       <h2>Finished</h2>
-  
       <div
         cdkDropList
         [cdkDropListData]="finished"
         class="example-list"
         (cdkDropListDropped)="drop($event)">
         <div class="example-box" *ngFor="let item of finished" cdkDrag>
+          <!-- <p>{{myObj.result}}</p> -->
           <p>{{item.name}}</p>
           <p>{{item.time}}</p>
           <p class="bonus" >{{finishedTaskTime}} </p>
-          
         </div>
       </div>
     </div>
   </div>
-  
