--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,13 +7,15 @@
   <li>{{ item.password}}</li>
   
 </ul> -->
+
 <app-navbar></app-navbar>
-<!-- <app-developer-content></app-developer-content> -->
 <router-outlet></router-outlet>
-<!-- <app-drag-timer></app-drag-timer> -->
-<!-- <app-developer-content></app-developer-content> -->
-<!-- <app-create-project></app-create-project> -->
-<app-admin-panel></app-admin-panel>
+<!-- 
+<app-developer-content></app-developer-content>
+<app-drag-timer></app-drag-timer>
+<app-developer-content></app-developer-content>
+<app-create-project></app-create-project>
+<app-admin-panel></app-admin-panel> -->
 
 
 
