--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -5,8 +5,11 @@
         </figure>
         <ul class="nav-container__list">
             <li class="nav-container__list-item"><a class="nav-container__list-item--link" routerLink="" routerLinkActive="active">Home</a></li>
-            <li class="nav-container__list-item"><a class="nav-container__list-item--link" routerLink="register" routerLinkActive="active">Register</a></li>
-            <li class="nav-container__list-item"><a class="nav-container__list-item--link" routerLink="login" routerLinkActive="active">Login</a></li>
+            <li class="nav-container__list-item"><a class="nav-container__list-item--link" routerLink="/register" routerLinkActive="active">Register</a></li>
+            <li class="nav-container__list-item"><a class="nav-container__list-item--link" routerLink="/login" routerLinkActive="active">Login</a></li>
+            <li class="nav-container__list-item"><a class="nav-container__list-item--link" routerLink="/createProject" routerLinkActive="active">CreateProject</a></li>
+            <li class="nav-container__list-item"><a class="nav-container__list-item--link" routerLink="/timer" routerLinkActive="active">Timer</a></li>
+            <li class="nav-container__list-item"><a class="nav-container__list-item--link" routerLink="/developerContent" routerLinkActive="active">DeveloperContent</a></li>
         </ul>
     </nav>
 </section>
