--- a/src/app/register/register.component.scss
+++ b/src/app/register/register.component.scss
@@ -1,14 +1,18 @@
 .form{
-    height: 85vh;
+    height: 90vh;
     display: flex;
     justify-content: center;
     align-items: center;
+    background-repeat: no-repeat;
+    background-position:right;
+    background-image: url(../../../../shapelogin.svg);
     &-container{
         display: flex;
         flex-direction: row;
         flex-wrap: wrap;
         flex:0 1 50%;
         justify-content: center;
+
         &__wrapper{
             flex: 0 1 70%;
             position: relative;
