--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
+$black:#333333;
+$white:#f0efef;
+$blue:#192965;
+$lightBlue:#c6d9fa;
+$orange:#fc6b10;
+$boxShadow:0px 6px 5px 0px rgba(245, 242, 245, 1);
+
 *::before,
 *::after{
     box-sizing: border-box;
