--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,39 +1,23 @@
 
-<!-- <input [(ngModel)]="filtering">
-<ul *ngFor="let item of ArrObj | search:filtering">
-  <li>{{ item.name}}</li>
-  <li>{{ item.role}}</li>
-  <li>{{ item.email}}</li>
-  <li>{{ item.password}}</li>
-  
-</ul> -->
-
 <router-outlet></router-outlet>
-<<<<<<< HEAD
-<app-all-projects></app-all-projects>
+<!-- <app-all-projects></app-all-projects> -->
 <!-- <app-admin-panel></app-admin-panel> -->
-<<<<<<< HEAD
 <!-- <app-drag-timer></app-drag-timer> -->
-<app-developer-content></app-developer-content>
-<app-navbar></app-navbar>
-<router-outlet></router-outlet>
+<!-- <app-developer-content></app-developer-content> -->
+<!-- <app-navbar></app-navbar> -->
 
 <!-- <app-drag-timer></app-drag-timer> -->
 <!-- <app-developer-content></app-developer-content> -->
-<app-create-project></app-create-project>
+<!-- <app-create-project></app-create-project> -->
 
 
 <!-- <app-drag-timer></app-drag-timer> -->
 <!-- <app-developer-content></app-developer-content> -->
 <!-- <app-create-project></app-create-project> -->
 
-=======
- <app-drag-timer></app-drag-timer>
-=======
+ <!-- <app-drag-timer></app-drag-timer>  -->
 
 <!-- <app-admin-panel></app-admin-panel> -->
- <!-- <app-drag-timer></app-drag-timer> -->
->>>>>>> mohamed
- <app-developer-content></app-developer-content> 
- <!-- <app-create-project></app-create-project> -->
->>>>>>> mohamed
+
+
+<app-project-details></app-project-details>
