--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,6 +5,12 @@ $blue:#192965;
 $lightBlue:#c6d9fa;
 $orange:#fc6b10;
 $boxShadow:0px 6px 5px 0px rgba(245, 242, 245, 1);
+$mainFont:'Raleway';
+$light:300;
+$regular:400;
+$medium:500;
+$semiBold:600;
+$bold:700;
 
 *::before,
 *::after{
