--- a/src/app/project-details/project-details.component.scss
+++ b/src/app/project-details/project-details.component.scss
@@ -4,7 +4,7 @@
         box-shadow: 0px 6px 5px 0px rgba(245, 242, 245, 1);
         .btn{
             font-size: 2rem;
-            color: $blue !important;
+            // color: $blue !important; 
         }
     }
 }
