--- a/src/app/developer-content/developer-content.component.html
+++ b/src/app/developer-content/developer-content.component.html
@@ -1,9 +1,60 @@
-<header class="header">
-  <h2>total time: {{totalProjectTime}}</h2>
-  <h2 class="bonus">Bonus :{{bonusValue}} </h2>
-  <h2 class="delay">Delay :{{delayValue}} </h2>
-</header>
-<div cdkDropListGroup>
+<section class="developer-content">
+  <div class="container-fluid">
+   <div class="row" cdkDropListGroup>
+      <div class="col-4 developer-content__status">
+        <h2>Pending</h2>
+        <div class=""
+          cdkDropList 
+          [cdkDropListData]="todo"
+          (cdkDropListDropped)="drop($event)" cdkDropList= "disable">
+          <div class="example-box row" *ngFor="let item of todo" cdkDrag cdkDragDisabled="{{disabledDrag}}">
+            
+              <div class="col-4">
+                <p>{{item.name}}</p>
+                <p>{{item.totalTime}}</p>
+              </div>
+              <div class="col-4">
+               
+              </div>
+            
+          </div>
+        </div>
+      </div>
+      <div class=" col-4 developer-content__status">
+        <h2>working On</h2>
+        <div
+          cdkDropList
+          [cdkDropListData]="workingOn"
+          class="example-list"
+          (cdkDropListDropped)="drop($event)" >
+          <div class="example-box" *ngFor="let item of workingOn" cdkDrag>
+            <p>{{result}}</p>
+            <p>{{item.name}}</p>
+            <p>{{item.totalTime}}</p>
+            <button (click)="handlePause()">{{status}}</button>
+          </div>
+        </div>
+      </div>
+      <div class="col-4 developer-content__status">
+        <h2>Finished</h2>
+        <div
+          cdkDropList
+          [cdkDropListData]="finished"
+          class="example-list"
+          (cdkDropListDropped)="drop($event)">
+          <div class="example-box" *ngFor="let item of finished" cdkDrag>
+            
+            <p>{{item.name}}</p>
+            <p>{{item.time}}</p>
+            <p class="bonus" >{{finishedTaskTime}} </p>
+          </div>
+        </div>
+      </div>
+   </div>
+  </div>
+</section>
+<!------------------------------------------------------>
+<!-- <div cdkDropListGroup>
     <div class="example-container">
       <h2>To do</h2>
       <div
@@ -13,7 +64,7 @@
         (cdkDropListDropped)="drop($event)" cdkDropList= "disable">
         <div class="example-box" *ngFor="let item of todo" cdkDrag cdkDragDisabled="{{disabledDrag}}">
           <p>{{item.name}}</p>
-          <p>{{item.time}}</p>
+          <p>{{item.totalTime}}</p>
         </div>
       </div>
     </div>
@@ -27,7 +78,7 @@
         <div class="example-box" *ngFor="let item of workingOn" cdkDrag>
           <p>{{result}}</p>
           <p>{{item.name}}</p>
-          <p>{{item.time}}</p>
+          <p>{{item.totalTime}}</p>
           <button (click)="handlePause()">{{status}}</button>
         </div>
       </div>
@@ -40,11 +91,11 @@
         class="example-list"
         (cdkDropListDropped)="drop($event)">
         <div class="example-box" *ngFor="let item of finished" cdkDrag>
-          <!-- <p>{{myObj.result}}</p> -->
+          
           <p>{{item.name}}</p>
           <p>{{item.time}}</p>
           <p class="bonus" >{{finishedTaskTime}} </p>
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
