--- a/src/app/developer-content/developer-content.component.scss
+++ b/src/app/developer-content/developer-content.component.scss
@@ -1,11 +1,13 @@
-
-  .example-container {
-      width: 350px;
-      max-width: 100%;
-      margin: 0 25px 25px 0;
-      display: inline-block;
-      vertical-align: top;
-    }
+@import './../ourVariables.scss';
+.developer-content{
+ &__status{
+  -webkit-box-shadow:$boxShadow;
+    -moz-box-shadow: $boxShadow;
+    box-shadow:$boxShadow;
+ }
+}
+/////////////////////////////////////////////////////////////////////////////
+ 
     
     .example-list {
       border: solid 1px #ccc;
@@ -20,13 +22,8 @@
       padding: 20px 10px;
       border-bottom: solid 1px #ccc;
       color: rgba(0, 0, 0, 0.87);
-      display: flex;
-      flex-direction: row;
-      align-items: center;
-      justify-content: space-between;
-      box-sizing: border-box;
       cursor: move;
-      background: white;
+      background: #fff;
       font-size: 14px;
     }
     
