--- a/src/app/drag-timer/drag-timer.component.html
+++ b/src/app/drag-timer/drag-timer.component.html
@@ -8,12 +8,13 @@
 
 <form [formGroup]='taskForm' (ngSubmit)='onSubmit(taskForm)'>
   <input formControlName="name"[(ngModel)]="item.name" placeholder="task name">
-  <input formControlName="descrption"[(ngModel)]="item.descrption" placeholder="task description">
-  <input formControlName="time" [(ngModel)]="item.time" placeholder="task time">
-  <input formControlName="deadLine" [(ngModel)]="item.deadLine" placeholder="task deadLine" type="date">
-  <input formControlName="startDate"  [(ngModel)]="item.startDate" placeholder="task startDate" type="date">
-  <input formControlName="employeeId" [(ngModel)]="item.employeeId" placeholder="employee name">
+  <input formControlName="description"[(ngModel)]="item.description" placeholder="task description">
+  <input formControlName="totalTime" [(ngModel)]="item.totalTime" placeholder="task time">
+  <input formControlName="startDate" [(ngModel)]="item.startDate" placeholder="task startDate" type="date">
+  <input formControlName="endDate"  [(ngModel)]="item.endDate" placeholder="task endDate" type="date">
+  <input formControlName="personId" [(ngModel)]="item.personId" placeholder="employee name">
   <input formControlName="status" [(ngModel)]="item.status" placeholder="status">
+  
 
   <button type="submit">send</button>
 </form>
