--- a/src/app/create-project/create-project.component.scss
+++ b/src/app/create-project/create-project.component.scss
@@ -7,11 +7,32 @@
     &-container{
         &__wrapper{
             position: relative;
-            font-size: 14px;
+           
+            color: rgba(0, 0, 0, 0.5);
+
+            &-input{
+                background-color: rgba(255, 255, 255, 0);
+                border:none;
+                border-bottom: 1px solid $orange;
+                outline:none;
+                margin-bottom: 30px;
+               
+                font-size: 15px;
+            }
             &-label{
                 position: absolute;
+                top: 0;
+                transition: all 0.2s;
+                z-index:-1;
+                font-size: 12px;
             }
            
         }
     }
+}
+.up{
+    position: absolute;
+    top:-20px;
+    font-size: 10px;
+    color:$orange;  
 }
