--- a/src/app/register/register.component.scss
+++ b/src/app/register/register.component.scss
@@ -6,7 +6,7 @@
     align-items: center;
     background-repeat: no-repeat;
     background-position:right;
-    background-image: url(../../../../shapelogin.svg);
+    // background-image: url(../../../../shapelogin.svg);
     &-container{
         display: flex;
         flex-direction: row;
