--- a/src/app/ourVariables.scss
+++ b/src/app/ourVariables.scss
@@ -1,8 +1,9 @@
 $black:#333333;
 $white:#f0efef;
+$lightblue:#2ca6ef;
 $blue:#192965;
-$lightBlue:#c6d9fa;
 $orange:#fc6b10;
+$gray:#999999;
 $boxShadow:0px 6px 5px 0px rgba(245, 242, 245, 1);
 $mainFont:'Raleway';
 $light:300;
