--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
-
-<app-navbar></app-navbar>
-<router-outlet></router-outlet>
-<!-- <app-admin-panel></app-admin-panel> -->
-<app-drag-timer></app-drag-timer>
-<app-developer-content></app-developer-content>
-<!-- <router-outlet></router-outlet> -->
-<!-- <app-create-project></app-create-project> -->
+    <!-- <app-navbar></app-navbar> -->
+    <router-outlet></router-outlet>
+    <!-- <app-admin-panel></app-admin-panel> -->
+    <!-- <app-drag-timer></app-drag-timer>
+    <app-developer-content></app-developer-content> -->
+    <!-- <router-outlet></router-outlet> -->
+    <!-- <app-create-project></app-create-project> -->
+   <app-home></app-home>
