--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,12 +5,8 @@
   <li>{{ item.role}}</li>
   <li>{{ item.email}}</li>
   <li>{{ item.password}}</li>
-  
 </ul> -->
-
 <app-navbar></app-navbar>
 <router-outlet></router-outlet>
-
-
-
-
+<!-- <app-drag-timer></app-drag-timer> -->
+<!-- <app-developer-content></app-developer-content> -->
