--- a/src/app/developer-content/developer-content.component.html
+++ b/src/app/developer-content/developer-content.component.html
@@ -13,7 +13,7 @@
         (cdkDropListDropped)="drop($event)" cdkDropList= "disable">
         <div class="example-box" *ngFor="let item of todo" cdkDrag cdkDragDisabled="{{disabledDrag}}">
           <p>{{item.name}}</p>
-          <p>{{item.time}}</p>
+          <p>{{item.totalTime}}</p>
         </div>
       </div>
     </div>
@@ -27,7 +27,7 @@
         <div class="example-box" *ngFor="let item of workingOn" cdkDrag>
           <p>{{result}}</p>
           <p>{{item.name}}</p>
-          <p>{{item.time}}</p>
+          <p>{{item.totalTime}}</p>
           <button (click)="handlePause()">{{status}}</button>
         </div>
       </div>
@@ -42,7 +42,7 @@
         <div class="example-box" *ngFor="let item of finished" cdkDrag>
           <!-- <p>{{myObj.result}}</p> -->
           <p>{{item.name}}</p>
-          <p>{{item.time}}</p>
+          <p>{{item.totalTime}}</p>
           <p class="bonus" >{{finishedTaskTime}} </p>
         </div>
       </div>
