--- a/src/app/all-projects/all-projects.component.html
+++ b/src/app/all-projects/all-projects.component.html
@@ -48,11 +48,11 @@
 </section>
 <!-----------------/all projects----------------->
 <!----------------------------------------------->
-<div class="chart">
+<!-- <div class="chart">
   <canvas baseChart [data]="pieChartData" [labels]="pieChartLabels" [chartType]="pieChartType"
     [options]="pieChartOptions" [colors]="pieChartColors" [legend]="pieChartLegend">
   </canvas>
-</div>
+</div> -->
 
 <!-- <div class="project">
      <p>project name:{{project.name}}</p>
