--- a/src/app/register/register.component.scss
+++ b/src/app/register/register.component.scss
@@ -15,9 +15,6 @@
     flex: 0 1 50%;
     justify-content: center;
     align-items: center;
-    background-repeat: no-repeat;
-    background-position:right;
-    // background-image: url(../../../../shapelogin.svg);
     &-container{
         display: flex;
         flex-direction: row;
@@ -63,7 +60,7 @@
     }
   }
 }
-
+}
 .form-container__wrapper-input-msg {
   border: none;
   background: none;
